# Server

./: README.md  codes.txt  try.py
Bot/: config.yml  device.json  go-cqhttp.bat  session.token  try.py
Bot/data/: image.db
Bot/data/images/: LOG
Bot/data/leveldb-v3/: 000223.ldb  000242.ldb  000247.ldb  000262.ldb  LOG  MANIFEST-000264
Bot/data/videos/: LOG
Bot/nb5/: .env.dev  README.md  bot.py  pyproject.toml
Bot/nb5/src/plugins/chatai/: __init__.py
Bot/nb5/src/plugins/try/: __init__.py
Bot/nb5/src/plugins/zhajinhua/: __init__.py  holdem.py  zjhcore.py
flask/: app.py  cczu.db  cczu_sql.py  library.py  tmux.txt  wechat_reply.py
try/: README.md  bot.py  pyproject.toml
try/nonebot-plugin-petpet-0.3.x/nonebot_plugin_petpet/: __init__.py
wechat/: CCZUVPNwithClass.py  app.py  app_miniprogram.py  cczu.db  cczu_sql.py  library.py  tmux.txt  try.py  wechat_reply.py
wechat/miniprogramproj/: app.js  app.json  project.config.json  project.private.config.json
wechat/miniprogramproj/pages/checkIn/: checkIn.js
wechat/miniprogramproj/pages/index/: index.js  index.wxml  index.wxss
wechat/miniprogramproj/pages/menu/: menu.js  menu.wxml  menu.wxss
wechat/miniprogramproj/utils/: login.js
